--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-sha256": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
